//
//  DashboardView.swift
//  MockingDemo
//
//  Created by Meric Alp on 28.03.2023.
//

import SwiftUI

struct DashboardView: View {
    var body: some View {
        VStack {
            Text("Hello World")
            .navigationTitle("Dashboard")
        }
    }
}

struct DashboardView_Previews: PreviewProvider {
    static var previews: some View {
        DashboardView()
    }
}

