...
            
            VStack(alignment: .leading) {
                
                if let existingTask = fetchRequest.wrappedValue.first {
                    Text(existingTask.title ?? "")
                    Image(systemName: task.isFavorite ? "heart.fill": "heart")
                        .accessibilityIdentifier("favoriteImage")
                        .foregroundColor(.red)
                        .frame(maxWidth: .infinity, alignment: .center)
                        .padding(.top, 50)
                        .font(.largeTitle)
                        .onTapGesture {
                            isFavorite = !task.isFavorite
...
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button {
                        // action
                        presentationMode.wrappedValue.dismiss()
                    } label: {
                        Text("Close")
                            .accessibilityIdentifier("closeButton")
                    }

                }
            }
        }
    }
...
